@@ -14,6 +14,9 @@ xxx xxx xx xx:xx:xx UTC 2009
 
         New features
 
+        - New 'w:' selector type for selecting the revision the workspace
+          is based on.
+
         Bugs fixed
 
         Internal
